@@ -63,7 +63,7 @@ my %MAP_OUT = (
     'biblioentry'   => { 'block'         => 1 },
     'othercredit'   => { 'block'         => 1 },
     'legalnotice'   => { 'block'         => 1 },
-    'address'       => { 'block'         => 1 },
+    'address'       => { 'block'       => 1, 'verbatim'      => 1 },
     'book'          => { 'block'         => 1 },
     'article'       => { 'block'         => 1 },
     'part'          => { 'block'         => 1 },
@@ -93,13 +93,13 @@ my %MAP_OUT = (
     'refname'       => { 'newline_after' => 1 },
     'refnamediv'    => { 'block'         => 1, 'id_node' => 'refname' },
     'manvolnum'     => { 'newline_after' => 1 },
-    'street'        => { 'newline_after' => 1 },
+    'street'        => {},
     'city'          => {},
     'state'         => {},
     'postcode'      => {},
-    'coutry'        => {},
-    'phone'    => { 'newline_after' => 1 },
-    'fax'      => { 'newline_after' => 1 },
+    'country'        => {},
+    'phone'    => {},
+    'fax'      => {},
     'pob'      => {},
     'subtitle' => { 'newline_after' => 1 },
     'screen'           => { 'block'       => 1, 'verbatim'      => 1 },
@@ -177,7 +177,6 @@ my %MAP_OUT = (
     'orgname'           => { 'newline_after' => 1 },
     'orgdiv'            => { 'newline_after' => 1 },
     'citetitle'      => {},
-    'country'        => { 'newline_after' => 1 },
     'trademark'      => {},
     'ulink'          => {},
     'firstterm'      => {},
