@@ -15,6 +15,7 @@
   - Use revision history for edition and release. BZ #642127
   - Deleted edition and release config parameters. BZ #642127
   - Add add_revision action and associated options. BZ #642127
+  - Have XmlClean treat address element as verbatim. BZ #662907
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
